feat: trigger module support GRPC consul resolver (#137)
